manifests/media/huntarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huntarr
  labels:
    app: huntarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: huntarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: huntarr
    spec:
      containers:
      - name: huntarr
        image: huntarr/huntarr:latest
        ports:
        - containerPort: 9705
        volumeMounts:
        - name: config-volume
          mountPath: /config
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: media-nfs
