manifests/media/huntarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huntarr
spec:
  selector:
    app: huntarr
  ports:
  - protocol: TCP
    port: 9705
    targetPort: 9705
  type: ClusterIP
